fixed mobile filter overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,6 @@ a.hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* border: 5px solid #222; */
     top: calc(5px + 0.5%);
     left: calc(20px + 20%);
     padding-left: 2%;
@@ -296,6 +295,7 @@ a.hover {
     padding: 1%;
     width: 98%;
     height: 14%;
+    overflow-y: scroll;
 }
 
 #mobile-panel-filter a {
